syntax = "proto3";

package bucketeer.event.client;
option go_package = "github.com/ca-dp/bucketeer/proto/event/client";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";

import "proto/feature/evaluation.proto";
import "proto/feature/reason.proto";
import "proto/user/user.proto";

message Event {
  string id = 1;
  google.protobuf.Any event = 2;
  string environment_namespace =
      3;  // SDK doens't need to set this field. It's set by gateway service.
}

message EvaluationEvent {
  int64 timestamp = 1;
  string feature_id = 2;
  int32 feature_version = 3;
  string user_id = 4;
  string variation_id = 5;
  bucketeer.user.User user = 6;
  bucketeer.feature.Reason reason = 7;
}

message GoalEvent {
  int64 timestamp = 1;
  string goal_id = 2;
  string user_id = 3;
  double value = 4;
  bucketeer.user.User user = 5;
  repeated bucketeer.feature.Evaluation evaluations = 6;
}

message MetricsEvent {
  int64 timestamp = 1;
  google.protobuf.Any event = 2;
}

message GetEvaluationLatencyMetricsEvent {
  map<string, string> labels = 1;
  google.protobuf.Duration duration = 2;
}

message GetEvaluationSizeMetricsEvent {
  map<string, string> labels = 1;
  int32 size_byte = 2;
}

message TimeoutErrorCountMetricsEvent {
  string tag = 1;
}

message InternalErrorCountMetricsEvent {
  string tag = 1;
}

message OpsEvent {
  int64 timestamp = 1;
  string feature_id = 2;
  int32 feature_version = 3;
  string variation_id = 4;
  string goal_id = 5;
  string user_id = 6;
}

message GoalBatchEvent {
  string user_id = 1;
  repeated UserGoalEventsOverTag user_goal_events_over_tags = 2;
}

message UserGoalEventsOverTag {
  string tag = 1;
  repeated UserGoalEvent user_goal_events = 2;
}

message UserGoalEvent {
  int64 timestamp = 1;
  string goal_id = 2;
  double value = 3;
}option optimize_for = CODE_SIZE;
