syntax = "proto3";

package bucketeer.feature;
option go_package = "github.com/ca-dp/bucketeer/proto/feature";

import "proto/feature/variation.proto";
import "proto/feature/reason.proto";

message Evaluation {
  string id = 1;
  string feature_id = 2;
  int32 feature_version = 3;
  string user_id = 4;
  string variation_id = 5;
  Variation variation = 6 [deprecated = true];
  Reason reason = 7;
  string variation_value = 8;
}

message UserEvaluations {
  enum State {
    QUEUED = 0;
    PARTIAL = 1;
    FULL = 2;
  }
  string id = 1;
  repeated Evaluation evaluations = 2;
  int64 created_at = 3;
}
option optimize_for = CODE_SIZE;
